Update service implementations and models